# marigold-os

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  partitions.csv
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
app-core/: Cargo.toml
app-core/src/: lib.rs
display/: Cargo.toml
display/src/: epd.rs  fb.rs  font.rs  lib.rs  literata_extra_generated.rs  literata_generated.rs  literata_semibold_generated.rs  render.rs
docs/: ARCHITECTURE.md  CONTEXT.md  FLASHING.md  IMPLEMENTATION_PLAN.md
docs/agents/: bench.md  domain.md  release.md  visual-verification.md
docs/plans/: 2026-07-06-x3-support-plan.md  2026-07-08-bench-program-plan.md  2026-07-08-custom-fonts-investigation.md  2026-07-09-portrait-mode.md
fixtures/scenarios/: chapters-select.toml  files-before-scan.toml  files-browse-wrap.toml  files-open-loaded-repaints.toml  files-open-queues-storage.toml  firmware-picker.toml  home.toml  sd-library-large-scroll.toml  sleep.toml  (+5 more)
fw/: Cargo.toml
hal-ext/: Cargo.toml
proto/: Cargo.toml
tools/: build-release.sh  build_font_pack.py  cargo.sh  font_pack_to_rust.py  fontgen_common.py  generate_bookerly.py  generate_literata.py  generate_literata_extra.py  generate_literata_semibold.py  generate_literata_sizes.py  generate_merriweather.py  generate_mockup_fonts.py  generate_qr.py  prepare-release.sh  verify_web_flasher.sh
tools/preview/: Cargo.toml
tools/preview/src/: main.rs  mockup_fonts_generated.rs
ui/: Cargo.toml
web/: index.html  manifest-x3.json  manifest-x4.json  release-assets.json
(+49 files in other folders)
