[package]
name = "x4-preview"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
display = { path = "../../display" }
proto = { path = "../../proto" }
ui = { path = "../../ui" }
png = "0.17"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
